@@ -33,6 +33,8 @@ changes relative to sbcl-1.3.14:
   * bug fix: handling of SB-SYS:WITH-PINNED-OBJECTS in the interpreters (both
     sb-eval and sb-fasteval) now actually pins objects on gencgc.
   * bug fix: AVX registers are preserved during exceptions on x86-64 macOS.
+  * bug fix: (directory "SOMETHING/*/**/MORE") is no longer equivalent to
+    (directory "SOMETHING/**/MORE")
 
 changes in sbcl-1.3.14 relative to sbcl-1.3.13:
   * minor incompatible change: the SB-PCL walker no longer recognizes
